# MapReduce

./: .gitignore  CMakeLists.txt  README.md  compile_mapper_reducer.sh  start_hdfs.sh  start_mapper.sh  start_reducer.sh
Common/: EnumAndConstants.cpp  EnumsAndConstants.h  ServiceAddress.h
Common/File/: File.cpp  File.h
Common/Services/: MapReduce.grpc.pb.cc  MapReduce.grpc.pb.h  MapReduce.pb.cc  MapReduce.pb.h  MapReduce.proto
HDFS/: HDFSServiceImpl.cpp  HDFSServiceImpl.h  server.cpp
HDFS/Common/: Utils.cpp  Utils.h
HDFS/Connection/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h
HDFS/Data/: DataStore.cpp  DataStore.h  DataValue.cpp  DataValue.h
HDFS/Request/: Request.cpp  Request.h  RetrievalRequest.cpp  RetrievalRequest.h  StorageRequest.cpp  StorageRequest.h
HDFS/Response/: Response.cpp  Response.h
Map/: MapperServiceImpl.cpp  MapperServiceImpl.h  main.cpp
Map/Config/: MapConfig.cpp  MapConfig.h
Map/Core/: Map.cpp  Map.h
Master/: Master.cpp  Master.h  main.cpp
Master/MapReduceService/: MapReduceImpl.cpp  MapReduceImpl.h
Master/MasterConfig/: MasterConfig.cpp  MasterConfig.h
Master/Models/: Mapper.cpp  Mapper.h  Reducer.cpp  Reducer.h
Master/StatusChecker/: StatusChecker.cpp  StatusChecker.h
Reduce/: ReducerServiceImpl.cpp  ReducerServiceImpl.h  main.cpp
Reduce/Config/: ReduceConfig.cpp  ReduceConfig.h
Reduce/Core/: Reduce.cpp  Reduce.h
Utils/: Utils.cpp  Utils.h
driver_artifacts/: driver.sh  input_generator.sh  invertedindexMap.cpp  invertedindexRed.cpp  start_req.json  start_req.json.template  wordcountMap.cpp  wordcountRed.cpp
logs/master_driver_logs/: driver_log  output
